editado formulario de adicao de livros

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,23 @@
   flex-grow: 2 !important;
 }
 
+#modal {
+  position: relative;
+  z-index: 999;
+}
+
+.modal {
+  background-color: rgba(0,0,0,0.5);
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .pesquisa input{
   outline: none;
   width: 100%;
@@ -50,7 +67,8 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: white;
+  text-decoration: none;
 }
 
 @keyframes App-logo-spin {
