--- a/src/components/css/livros-style.css
+++ b/src/components/css/livros-style.css
@@ -11,7 +11,9 @@
 
 .livrosArea{
     display: flex;
-    max-height: 300px;
-    align-items:flex-start;
+    height: 300px;
+    width: 230px; 
+    /* align-items:center; */
+    justify-content: space-between;
     overflow: hidden;   
 }
