--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,24 @@
   justify-content: space-around;
 }
 
+@media(max-width:750px){
+  .App-header{
+    flex-direction: column;
+    
+  } 
+
+  .App-header span{
+    /* margin-bottom: 5px; */
+    width: 80%;
+  }
+
+  .App-header span:last-child{
+    margin: 15px 0px;
+  }
+
+
+}
+
 .App-header span{
   color: white;
   flex-grow: 1;
@@ -45,11 +63,11 @@
 
 .pesquisa input{
   outline: none;
-  width: 100%;
-  height: 30px;
+  width: 95%;
+  height: 35px;
   border-radius: 20px;
   border: none;
-  padding: 5px;
+  /* padding: 5px; */
   padding-left: 25px;
   font-size: 16px;
 }
