--- a/src/components/css/add-style.css
+++ b/src/components/css/add-style.css
@@ -6,18 +6,7 @@
     background-color: #353535;
 }
 
-.input-text{
-    outline: none;
-    width: 90%;
-    height: 30px;
-    border-radius: 20px;
-    border: none;
-    padding: 5px;
-    padding-left: 25px;
-    font-size: 14px;
-    margin-top:7px;
-    margin-bottom:10px;
-}
+
 
 .input-label{
     color:white;
@@ -26,15 +15,7 @@
     font-size: 20px;
 }
 
-.textarea-text{
-    outline: none;
-    width: 90%;
-    border-radius: 20px;
-    border: none;
-    padding: 5px;
-    padding-left: 25px;
-    font-size: 14px;
-}
+
 
 .form-container{
     display: flex;
@@ -65,4 +46,115 @@
 .info-box{
     height: 40px;
     background-color: green;
+}
+
+
+/* Estilos CONTATO */
+
+.contato-container{
+    min-height: 100vh;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #353535;
+    flex-direction: column;
+}
+
+.contato-title{
+    text-align: center;
+    width: 90%;
+    color: white;
+    font-size:100px;
+}
+
+.input-text{
+    outline: none;
+    width: 90%;
+    height: 50px;
+    border-radius: 15px;
+    border: none;
+    padding: 5px;
+    padding-left: 25px;
+    font-size: 18px;
+    margin-top:7px;
+    margin-bottom:18px;
+}
+
+.input-text input:last-child{
+    margin-bottom: 0px;
+}
+
+.contato-form{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.contato-info{
+    width: 45%;
+}
+
+.envia-contato{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    height: 40px;
+    font-size:25px;
+    width: 25%;
+    text-align: center;
+    padding: 10px;
+    background-color: #fed136; 
+    border-radius: 10px;
+}
+
+.envia-contato:hover{
+    cursor:pointer;
+    background-color: #fec503;
+}
+
+.textarea-text{
+    outline: none;
+    height: 208px;
+    width: 90%;
+    border-radius: 20px;
+    border: none;
+    padding: 15px;
+    padding-left: 25px;
+    font-size: 20px;
+}
+
+.msg-info{
+    width: 45%;
+}
+
+.btn-volta{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
+    position: fixed;
+    color:white;
+    top:0;
+    left: 0;
+    font-size:48px;
+}
+
+@media(max-width:800px){
+    .contato-form{
+        flex-direction: column;
+    }
+
+    .textarea-text{
+        margin-bottom: 15px;
+    }
+    .envia-contato{
+        width: 45%;
+    }
+    .contato-title{
+        font-size:70px;
+    }
+    
 }
