--- a/src/components/css/modal.css
+++ b/src/components/css/modal.css
@@ -1,17 +1,36 @@
+.modal-container{
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,.8);
+    position:fixed;
+    float: left;
+    z-index: 999;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    
+    
+    
+}
+
 .dialog {
     width: 900px;
     max-width: 90%;
+    max-height: 95vh;
     margin: 0 auto;
     position: fixed;
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
     z-index: 999;
-    background-color: rgba(0,0,0,0.9);
+    background-color: rgba(255,255, 255, .95);
     padding: 10px 20px 40px;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
+    font-size:16px;
+    color:black;
+
 }
 
 .close-button {
@@ -24,4 +43,21 @@
     height: 30px;
     font-weight: bold;
     align-self: flex-end;
+}
+
+.content-dialog{
+    display: flex;
+    align-items: center;
+    overflow-y: auto;
+}
+
+.content-dialog span:last-child{
+    margin-left:20px;
+    text-align: start;
+}
+
+@media(max-width:600px){
+    .content-dialog{
+        flex-direction: column;
+    }
 }
