--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,11 @@
   text-decoration: none;
 }
 
+.btn-contato{
+  border-bottom: 1px solid;
+  height: 10px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
