Corrigido bug de pesquisa. Editado alguns estilos parar centralizar os livros. Tamanho do modal diminuido.

--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@
   flex-direction: row;
   padding-top: 5vh; 
   /* align-items: center; */
-  /* justify-content: center; */
+  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
