--- a/src/components/css/livros-style.css
+++ b/src/components/css/livros-style.css
@@ -14,7 +14,7 @@
     height: 300px;
     width: 230px; 
     /* align-items:center; */
-    justify-content: space-between;
+    justify-content: center;
     overflow: hidden;   
 }
 
