--- a/src/components/css/modal.css
+++ b/src/components/css/modal.css
@@ -3,12 +3,12 @@
     height: 100vh;
     background-color: rgba(0,0,0,.8);
     position:fixed;
-    float: left;
+    /* float:    left; */
     z-index: 999;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    
+    overflow: hidden !important;
 }
 
 .dialog {
