--- a/src/components/css/modal.css
+++ b/src/components/css/modal.css
@@ -41,12 +41,14 @@
     height: 30px;
     font-weight: bold;
     align-self: flex-end;
+    background-image: '../icone-excluir.png'
 }
 
 .content-dialog{
     display: flex;
     align-items: center;
     overflow-y: auto;
+    max-height: 550px;
 }
 
 .content-dialog span:last-child{
